--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,20 @@
 <dependency>
   <groupId>io.qameta.allure</groupId>
   <artifactId>allure-testng</artifactId>
+  <scope>test</scope>
 </dependency>
+
+  <dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-java-commons</artifactId>
+    <version>2.21.0</version>
+  </dependency>
+  <dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-commandline</artifactId>
+    <version>2.21.0</version>
+    <type>pom</type>
+  </dependency>
 
   <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
